force-app/main/default/objects/ConnectDepositOffsetInvoicing__c/ConnectDepositOffsetInvoicing__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill+Dep Offs</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>CONNECT DEPOSIT OFFSET &amp; INVOICING ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS Bill+Dep Offs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>