force-app/main/default/objects/ConnectDepositOffsetInvoicing__c/fields/DepositOffsetRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetRollupStatus__c</fullName>
    <label>DEPOSIT OFFSET ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>