force-app/main/default/objects/ConnectDepositOffsetInvoicing__c/fields/InvoicingID__c.field-meta.xml
<CustomField>
    <fullName>InvoicingID__c</fullName>
    <label>INVOICING ID</label>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipLabel>CONNECT DEPOSIT OFFSET &amp; INVOICING</relationshipLabel>
    <relationshipName>InvoicingID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>